src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Degree Sourcing</fullName>
        <description>This is the sales process for sourcing degrees</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed %2F Lost or Dormant</fullName>
        </values>
        <values>
            <fullName>Closed %2F Won</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Contract Creation</fullName>
        </values>
        <values>
            <fullName>Design %26 Final Proposal Creation</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Target Identified</fullName>
        </values>
        <values>
            <fullName>Term Sheet Development</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Industry Core</fullName>
        <description>This is the Opportunity to track Industry-made Courses and Specializations</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed %2F Lost or Dormant</fullName>
        </values>
        <values>
            <fullName>Closed %2F Won</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Contract Creation</fullName>
        </values>
        <values>
            <fullName>Proposal Development</fullName>
        </values>
        <values>
            <fullName>Proposal Submission</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>University Core</fullName>
        <description>This is the sales process for ParMas to source courses and Specializations</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed %2F Won</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Commitment</fullName>
        </values>
        <values>
            <fullName>Interest Development</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>RFP Review and Approval</fullName>
        </values>
        <values>
            <fullName>RFP Submission</fullName>
        </values>
        <values>
            <fullName>Target Identified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AM_Introduced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Confirms whether AM has been introduced</description>
        <inlineHelpText>Confirms whether AM has been introduced</inlineHelpText>
        <label>Outdated AM Introduced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accepted_Notes_for_POps__c</fullName>
        <label>Accepted Notes for POps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Model__c</fullName>
        <description>Account Model for B2B Opportunities</description>
        <label>Outdated Account Model</label>
        <picklist>
            <picklistValues>
                <fullName>Decentralized Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decentralized Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centralized Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centralized Global</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Role__c</fullName>
        <description>Temporary for report</description>
        <formula>Account.Owner.UserRole.Name</formula>
        <label>Account Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <description>Allowing account plans to be linked to opportunities</description>
        <inlineHelpText>URL for Account Plan</inlineHelpText>
        <label>Outdated Account Plan</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Actual_Launch_Date__c</fullName>
        <inlineHelpText>Actual launch date on platform (populated automatically when live on Coursera)</inlineHelpText>
        <label>Outdated Actual Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_course_all_time_revenue_on_platfo__c</fullName>
        <description>Actual target all-time revenue on platform (populated automatically when live on Coursera; linked to DWH)</description>
        <inlineHelpText>Actual target all-time revenue on platform (populated automatically when live on Coursera; linked to DWH)</inlineHelpText>
        <label>Outdated All-time post-launch revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Considerations_Concerns__c</fullName>
        <description>Additional Considerations/Concerns B2B Opportunities</description>
        <label>OdatedAdditional Considerations/Concerns</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Sourcing_Notes__c</fullName>
        <label>Additional Sourcing Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Stipulations__c</fullName>
        <inlineHelpText>Are there additional stipulations on top of the standard RFP acceptance?</inlineHelpText>
        <label>Additional Stipulations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advance_Amount_Given__c</fullName>
        <inlineHelpText>Was this content given an advance, and how large was the advance?</inlineHelpText>
        <label>Advance Amount Given</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>All_time_post_launch_enrollees__c</fullName>
        <description>Actual target all-time enrollees on platform (populated automatically when live on Coursera; linked to DWH)</description>
        <inlineHelpText>Actual target all-time enrollees on platform (populated automatically when live on Coursera; linked to DWH)</inlineHelpText>
        <label>Outdated All-time post-launch enrollees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_granted_in_advance__c</fullName>
        <inlineHelpText>Advance amount granted</inlineHelpText>
        <label>Amount granted in advance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annualized_Amount_USD_Unweighted__c</fullName>
        <description>ARR - unweighted and hidden</description>
        <formula>if(or(isblank( Contract_Start_Date__c )=true,isblank(Contract_End_Date__c )=true),  Amount  ,

Amount/(Contract_Months_Calculated__c/12))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ARR - unweighted and hidden</inlineHelpText>
        <label>OdatedAnnualized Amount (USD) Unweighted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annualized_Amount_USD__c</fullName>
        <formula>if(or(isblank( Contract_Start_Date__c )=true,isblank(Contract_End_Date__c )=true), ExpectedRevenue ,

ExpectedRevenue/(Contract_Months_Calculated__c/12))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>B2B: ARR for a given deal</inlineHelpText>
        <label>Outdated Annualized Amount (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Process__c</fullName>
        <label>Outdated Approval Process</label>
        <picklist>
            <picklistValues>
                <fullName>RFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cert</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Stage__c</fullName>
        <inlineHelpText>to be edited/confirmed by T&amp;L/CSM/Pauline</inlineHelpText>
        <label>Outdated Approval Stage</label>
        <picklist>
            <picklistValues>
                <fullName>In Review</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Curriculum reviewed by CSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Curriculum reviewed by T&amp;L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Conversation with Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Won</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>B2B_Account_Vertical__c</fullName>
        <inlineHelpText>References the account page</inlineHelpText>
        <label>Outdated B2B Account Vertical</label>
        <picklist>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nonprofit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Branding_Notes__c</fullName>
        <description>This field stores the brand related details for the new Industry partner</description>
        <inlineHelpText>Brand related summary for new IP</inlineHelpText>
        <label>Branding Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outdated Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIP_Sales_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CIP Sales Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSM_Score__c</fullName>
        <label>CSM Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSM_VM_First_Name__c</fullName>
        <formula>CSM_VM_for_Content_Approval__r.FirstName</formula>
        <label>CSM VM First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSM_VM_for_Content_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Vertical Manager (CSM) assigned to review and approve content of the RFP</inlineHelpText>
        <label>CSM VM for Content Approval</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunitiesToReview</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Vertical__c</fullName>
        <formula>TEXT(Campaign.Vertical__c)</formula>
        <label>Campaign Vertical</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>What campaign does this opp match to?</inlineHelpText>
        <label>Outdated Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities (Campaign)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capstone_Model__c</fullName>
        <description>This field allows TAMs to indicate the current Capstone Model</description>
        <inlineHelpText>Locked Capstone = Legacy Model where Learners only enroll once they completed previous
Unlocked Cumulative Project = New Model with standalone PBC that anyone can enroll in
No Standalone Project-Base Course = New Model i.e. distributed project</inlineHelpText>
        <label>Outdated Capstone Model</label>
        <picklist>
            <picklistValues>
                <fullName>Locked Capstone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlocked Cumulative Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Standalone Project-Based Course</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Capstone_Transition_Plan__c</fullName>
        <description>This field allows TAMs to capture status of discussion with Partner, in the hopes to transition them away from the old model of Capstones</description>
        <inlineHelpText>Please provide an update on the progress of discussion around Capstones - When are they going to switch to the new model? Which model are they going to choose? What modifications are Partners going to make? What are blockers?</inlineHelpText>
        <label>Outdated Capstone Transition Plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Career_Path__c</fullName>
        <formula>Campaign.Career_Path__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Career Path</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cert_Definition_Link__c</fullName>
        <label>Shared Program Definition Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cert_EoI__c</fullName>
        <label>Cert EoI Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date_Custom__c</fullName>
        <description>First day of the close date quarter</description>
        <formula>if(year(CloseDate)=2016, 
if(month(CloseDate)=1,CloseDate-day(CloseDate)+1, 
if(month(CloseDate)=2,CloseDate-day(CloseDate)-31+1, 
if(month(CloseDate)=3,CloseDate-day(CloseDate)-29-31+1, 
if(month(CloseDate)=4,CloseDate-day(CloseDate)+1, 
if(month(CloseDate)=5,CloseDate-day(CloseDate)-30+1, 
if(month(CloseDate)=6,CloseDate-day(CloseDate)-31-30+1, 
if(month(CloseDate)=7,CloseDate-day(CloseDate)+1, 
if(month(CloseDate)=8,CloseDate-day(CloseDate)-31+1, 
if(month(CloseDate)=9,CloseDate-day(CloseDate)-31-31+1, 
if(month(CloseDate)=10,CloseDate-day(CloseDate)+1, 
if(month(CloseDate)=11,CloseDate-day(CloseDate)-31+1, 
CloseDate-day(CloseDate)-30-31+1))))))))))), 
if(month(CloseDate)=1,CloseDate-day(CloseDate)+1, 
if(month(CloseDate)=2,CloseDate-day(CloseDate)-31+1, 
if(month(CloseDate)=3,CloseDate-day(CloseDate)-28-31+1, 
if(month(CloseDate)=4,CloseDate-day(CloseDate)+1, 
if(month(CloseDate)=5,CloseDate-day(CloseDate)-30+1, 
if(month(CloseDate)=6,CloseDate-day(CloseDate)-31-30+1, 
if(month(CloseDate)=7,CloseDate-day(CloseDate)+1, 
if(month(CloseDate)=8,CloseDate-day(CloseDate)-31+1, 
if(month(CloseDate)=9,CloseDate-day(CloseDate)-31-31+1, 
if(month(CloseDate)=10,CloseDate-day(CloseDate)+1, 
if(month(CloseDate)=11,CloseDate-day(CloseDate)-31+1, 
CloseDate-day(CloseDate)-30-31+1))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>First day of the close date quarter</inlineHelpText>
        <label>Close Date (Custom)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Close_Date_in_Current_Quarter__c</fullName>
        <description>If the quarter of the close date matches the current quarter, then true; otherwise false</description>
        <formula>OR(MONTH(TODAY())=MONTH(CloseDate),
AND(OR(MONTH(TODAY())=1,MONTH(TODAY())=2,MONTH(TODAY())=3),OR(MONTH(CloseDate)=1,MONTH(CloseDate)=2,MONTH(CloseDate)=3)),
AND(OR(MONTH(TODAY())=4,MONTH(TODAY())=5,MONTH(TODAY())=6),OR(MONTH(CloseDate)=4,MONTH(CloseDate)=5,MONTH(CloseDate)=6)),
AND(OR(MONTH(TODAY())=7,MONTH(TODAY())=8,MONTH(TODAY())=9),OR(MONTH(CloseDate)=7,MONTH(CloseDate)=8,MONTH(CloseDate)=9)),
AND(OR(MONTH(TODAY())=10,MONTH(TODAY())=11,MONTH(TODAY())=12),OR(MONTH(CloseDate)=10,MONTH(CloseDate)=11,MONTH(CloseDate)=12)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the quarter of the close date matches the current quarter, then true; otherwise false</inlineHelpText>
        <label>Close Date in Current Quarter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Date_in_Previous_Quarter_CY__c</fullName>
        <description>True if the close date is in a previous quarter from the same year, otherwise false</description>
        <formula>OR(
AND(MONTH(TODAY())&gt;=4,MONTH(CloseDate)&lt;4), 
AND(MONTH(TODAY())&gt;=7,MONTH(CloseDate)&lt;7), 
AND(MONTH(TODAY())&gt;=10,MONTH(CloseDate)&lt;10))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>True if the close date is in a previous quarter from the same year, otherwise false</inlineHelpText>
        <label>Close Date in Previous Quarter (CY)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competency__c</fullName>
        <formula>Campaign.Competency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Amount__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Always keep as 1. Used for weighted estimated.</description>
        <inlineHelpText>If you can see this, ignore it. Do not touch</inlineHelpText>
        <label>Content Amount</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Content_Created_By__c</fullName>
        <inlineHelpText>Select if content is created by Industry partner or co-created by Industry partner &amp; university</inlineHelpText>
        <label>Content Created By</label>
        <picklist>
            <picklistValues>
                <fullName>IP-Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP&amp;University-Created</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Content_Domain__c</fullName>
        <description>Primary content area or category on Coursera platform</description>
        <inlineHelpText>Primary content area or category on Coursera platform</inlineHelpText>
        <label>Content Domain</label>
        <picklist>
            <picklistValues>
                <fullName>Creative/Arts &amp; Humanities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Language Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech/Computer Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data/Data Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Math &amp; Logic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Development/Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical Science &amp; Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Sciences</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Content_Fit_Reviewer__c</fullName>
        <formula>Campaign.Parent.Parent.Content_Fit_Reviewer__r.FirstName + &quot; &quot; + Campaign.Parent.Parent.Content_Fit_Reviewer__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Content Fit Reviewer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Sourcing__c</fullName>
        <description>Content Sourcing for B2B Opportunties</description>
        <label>Content Sourcing</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Strategy_Reviewed__c</fullName>
        <description>Updated by Content Strategy; validates whether the course/target was reviewed and approved, allowed, or rejected. If nothing has been reviewed, then this field is blank.</description>
        <inlineHelpText>Updated by Content Strategy; validates whether the course/target was reviewed and approved, allowed, or rejected. If nothing has been reviewed, then this field is blank.</inlineHelpText>
        <label>Content Strategy Reviewed</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
                <color>#3366FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>Allowed</fullName>
                <color>#2F5D85</color>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
                <color>#CC0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Content_Submission_Date__c</fullName>
        <inlineHelpText>Date content is finalized to begin course review</inlineHelpText>
        <label>SDP/CDP Submit for Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Content_Summary__c</fullName>
        <description>This field stores the brief info about content the new Industry Partner is interested in</description>
        <inlineHelpText>Content summary for new Industry partner</inlineHelpText>
        <label>Content Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Content_Target_Made_True__c</fullName>
        <description>Checks if &apos;Content Target Made&apos; field is blank or not</description>
        <formula>LEN( Content_Target_Made__c )&gt;0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks if &apos;Content Target Made&apos; field is blank or not</inlineHelpText>
        <label>Content Target Made = True</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Content_Target_Made__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Connects to the primary content area for a given quarter</description>
        <inlineHelpText>Connects to the primary content area for a given quarter</inlineHelpText>
        <label>Content Target Made</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Target__c.Content_Target_Quarter__c</field>
                <operation>lessOrEqual</operation>
                <valueField>$Source.CloseDate</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.CloseDate</field>
                <operation>lessOrEqual</operation>
                <valueField>Target__c.Content_Target_Quarter_End__c</valueField>
            </filterItems>
            <infoMessage>Select the content target best aligned to this specific opportunity. Reach out to Bec if things look buggy here :)</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Target__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Content_Title__c</fullName>
        <formula>Campaign.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Content Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Type_PCKLST__c</fullName>
        <description>Content Type on Content Opportunity. If available, value auto populated from campaign</description>
        <inlineHelpText>Content Type for opportunity. If available, value auto populated from campaign</inlineHelpText>
        <label>Content Type</label>
        <picklist>
            <picklistValues>
                <fullName>Certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Degree</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <formula>TEXT( Campaign.Content_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulled from Content Type on Campaign</inlineHelpText>
        <label>Campaign: Content Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <description>Date on which the contract ends (B2B)</description>
        <inlineHelpText>Date on which the contract ends</inlineHelpText>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Months_Calculated__c</fullName>
        <formula>round((Contract_End_Date__c -  Contract_Start_Date__c )/30.4375,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated # months on the contract</inlineHelpText>
        <label>Contract Months (Calculated)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <description>Date on which the contract goes in effect (active) - B2B</description>
        <inlineHelpText>Date on which the contract goes in effect (active)</inlineHelpText>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cost_financial_reasons__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if reasons for loss included: cost/financial/budgetary reasons</description>
        <inlineHelpText>Checked if reasons for loss included: cost/financial/budgetary reasons</inlineHelpText>
        <label>Cost/financial reasons</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For B2B: Checked if opportunity was lost for pricing/cost reasons</description>
        <inlineHelpText>For B2B: Checked if opportunity was lost for pricing/cost reasons</inlineHelpText>
        <label>Cost/pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course_1_Confirmed_for_Feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Course 1 Confirmed for Feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course_2_Confirmed_for_Feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Course 2 Confirmed for Feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course_2_Launch_Date__c</fullName>
        <label>Course 2 Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_2_Submission_Date__c</fullName>
        <label>Course 2 Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_2_T_L_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Course 2 T&amp;L Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course_3_Confirmed_for_Feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Course 3 Confirmed for Feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course_3_Launch_Date__c</fullName>
        <label>Course 3 Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_3_Submission_Date__c</fullName>
        <label>Course 3 Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_3_T_L_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Course 3 T&amp;L Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course_4_Launch_Date__c</fullName>
        <label>Course 4 Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_4_Submission_Date__c</fullName>
        <label>Course 4 Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_4_T_L_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Course 4 T&amp;L Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course_Content_Selection__c</fullName>
        <description>Course content selection for B2B opportunities</description>
        <label>Course Content Selection</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Language__c</fullName>
        <description>The language the course is conducted in (default set to English)</description>
        <inlineHelpText>The language the course is conducted in (default set to English)</inlineHelpText>
        <label>Course Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hindi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mandarin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Course_NPS_CSAT__c</fullName>
        <inlineHelpText>NPS/CSAT measurement on target once launched</inlineHelpText>
        <label>NPS/CSAT Grade</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Submit_for_Launch_Date__c</fullName>
        <inlineHelpText>The date all course materials need to be uploaded to start the review process (beta-testing, QA, etc)</inlineHelpText>
        <label>Course Submit for Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_Type_Subcategory__c</fullName>
        <description>Specific type of course, s12n, or degree (if applicable)</description>
        <inlineHelpText>Specific type of course, s12n, or degree (if applicable)</inlineHelpText>
        <label>Course Subcategory</label>
        <picklist>
            <controllingField>Main_Course_Type__c</controllingField>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High-Demand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project-Based Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Star Instructor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Currently_in_production__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Currently busy in another production</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_1_committed_for_content_creation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>First line of decision maker (POC) said yes (orally or via e-mail) to content creation</inlineHelpText>
        <label>DM-1 committed for content creation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_1_understood_campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>First line decision maker (POC/Dean/Instructor) understood the overall sourcing process (incentives, constraints,...)</inlineHelpText>
        <label>DM-1 understood campaign?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_2_committed_for_content_creation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mark true if 2nd line decision maker (Instructor) has said yes (orally or via e-mail) for content creation</inlineHelpText>
        <label>DM-2 committed for content creation?</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>